--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.16",
+    "@fortawesome/fontawesome-free": "^7.1.0",
+    "bulma": "^1.0.4",
+    "chalk": "^5.6.2",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.16"
+    "react-router-dom": "^7.9.5",
+    "sass": "^1.93.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
